# expectise

./: .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: lint_test_release.yaml
example/models/: base_api.py  some_api.py
example/some_module/: some_api.py  some_conflicting_api.py  some_functions.py  some_other_api.py
example/tests/: my_test_case.py  some_conflicting_api_test.py  some_file_test.py  some_module_test.py  some_other_file_test.py  some_other_module_test.py  test_functions_with_context_manager.py  test_functions_with_fixtures.py  test_methods_with_context_manager.py  test_methods_with_fixtures.py  test_with_context_manager.py  test_with_fixtures.py
expect/: __init__.py  exceptions.py  expect.py  expectations.py  mock_if.py
expectise/: __init__.py  exceptions.py  expect.py  expectations.py  mock_if.py  mocks.py
expectise/constants/: __init__.py  lifespan.py
expectise/exceptions/: __init__.py  environment_error.py  expectation_error.py
expectise/hooks/: __init__.py  disable_mock.py  mock.py  mock_if.py  tear_down.py
expectise/lib/: expect.py  expectations.py  marker.py  mock.py  mock_instance.py  session.py
expectise/mock/: expect.py  expectations.py  marker.py  mock.py  mock_instance.py  session.py
expectise/models/: __init__.py  decoration.py  kallable.py  lifespan.py  method.py  trigger.py
expectise/utils/: diff.py
models/: base_api.py  some_api.py
tests/: expect.py  my_test_case.py  some_file_test.py
