[tool.poetry]
name = "expectise"
version = "0.0.0" # Placeholder, not used as versions are managed in the CICD
description = "Mocking API and function calls in Python - inspired by Ruby's RSpec-Mocks."
authors = ["tcassou"]
readme = "README.md"
homepage = "https://github.com/tcassou/expectise"
repository = "https://github.com/tcassou/expectise"

keywords = ["python", "testing", "mocking", "unit", "tests"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Mocking",
]

packages = [
  { include = "expectise" },
  { include = "expectise/exceptions" },
  { include = "expectise/hooks" },
  { include = "expectise/lib" },
  { include = "expectise/models" },
  { include = "expectise/utils" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0"
pytest = "^8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pylic]
safe_licenses = [
  "Apache-2.0",
  "BSD License",
  "BSD-2-Clause",
  "BSD-3-Clause",
  "ISC License (ISCL)",
  "MIT",
  "MIT License",
  "PSF-2.0",
]
unsafe_packages = []
